<resources>
    <string name="app_name">MoBan.vn</string>
    <string name="slogan">CONNECTING AGENTS</string>
    <string name="youtube_api_key">AIzaSyCo-DJVtfqQpMPFBcYfi789MmjPs4_YUQU</string>
    <string name="facebook_app_id">700115700689621</string>
    <string name="package_name">com.moban</string>
    <string name="test_package_name">com.moban.test</string>
    <string name="font_regular">fonts/WorkSans-Regular.ttf</string>
    <string name="font_medium">fonts/WorkSans-Medium.ttf</string>
    <string name="font_light">fonts/WorkSans-Light.ttf</string>
    <string name="font_bold">fonts/WorkSans-SemiBold.ttf</string>
    <string name="format_full_price_vnd">###,###,### VNĐ</string>
    <string name="format_simple_price">###,### K</string>
    <string name="normal_number_format">###,###,###,###</string>
    <string name="welcome">Xin chào</string>
    <string name="read_more">Xem thêm</string>
    <string name="view">Xem</string>
    <string name="ok">OK</string>
    <string name="retry">Thử lại</string>
    <string name="cancel">Hủy</string>
    <string name="skip">Bỏ qua</string>
    <string name="logout">Đăng xuất</string>
    <string name="copy">Copy</string>
    <string name="plus">+</string>
    <string name="subtract">-</string>
    <string name="update">Cập nhật</string>
    <string name="update_now">Cập Nhật Ngay</string>
    <string name="no_data">Không có dữ liệu</string>
    <string name="month_chart">Tháng</string>
    <string name="latest">Mới Nhất</string>
    <string name="fee">Phí Hoa Hồng</string>
    <string name="confirmed_revenue">Doanh Thu Ghi Nhận</string>
    <string name="confirmed_revenue_2_lines">Doanh Thu\nGhi Nhận</string>
    <string name="select">Vui Lòng Chọn</string>
    <string name="price">Giá</string>
    <string name="fee_project">Phí</string>
    <string name="agree">Đồng ý</string>
    <string name="later">Để sau</string>
    <string name="done">Xong</string>
    <string name="finish">Hoàn Tất</string>
    <string name="get">Nhận</string>
    <string name="got">Đã Nhận</string>
    <string name="by">vì</string>
    <string name="failed">Đã có lỗi xảy ra</string>
    <string name="downloaded">Đã\nTải</string>
    <string name="downloaded_image">Đã tải ảnh thành công</string>
    <string name="download_image_failed">Không thể tải ảnh</string>
    <string name="action_continue">Tiếp Tục</string>
    <string name="confirm">Xác Nhận</string>
    <string name="total">Tổng</string>
    <string name="empty">Trống</string>
    <string name="quick_select">Chọn Nhanh:</string>
    <string name="floor">Tầng</string>
    <string name="phone_support">0909352605</string>
    <string name="stt">STT</string>
    <string name="partner_name">Tên Đối Tác</string>
    <string name="partner">Đối Tác</string>
    <string name="partner_manager"> Quản Lý Đối Tác</string>
    <string name="level">Level</string>
    <string name="date_update">Cập nhật ngày</string>
    <string name="update_app">Cập nhật MoBan.vn</string>
    <string name="update_app_new_version">MoBan.vn đã có phiên bản mới.</string>
    <string name="update_app_force_new_version">MoBan.vn đã có phiên bản mới.\n Hãy cập nhật ngay nhé.</string>
    <string name="network_no_internet">Không có kết nối mạng</string>
    <string name="network_check_and_try_again">Vui lòng kiểm tra và thử lại</string>
    <string name="network_try_again">Thử lại</string>
    <string name="app_moban_request">Yêu cầu từ MoBan.vn App</string>
    <string name="read_storage_request">MoBan.vn muốn truy cập vào bộ nhớ thiết bị của bạn</string>
    <string name="no_location_permission">Chưa bật định vị</string>
    <string name="request_location_permission">MoBan.vn app muốn sử dụng định vị để xác định vị trí của bạn. Nhấn \'Mở Cài Đặt\' để bật nhé.</string>
    <string name="no_camera_permission">Chưa bật Camera</string>
    <string name="request_camera_permission">MoBan.vn app muốn sử dụng camera để chụp ảnh. Nhấn \'Mở Cài Đặt\' để bật nhé.</string>
    <string name="open_setting">Mở cài đặt</string>
    <string name="sort_latest">Mới Nhất</string>
    <string name="sort_rate_asc">Phí Thấp Đến Cao</string>
    <string name="sort_rate_desc">Phí Cao Đến Thấp</string>
    <string name="sort_hot">Nổi Bật</string>
    <string name="sort_sale">Giảm Giá</string>
    <string name="sort_reward">Chính Sách Thưởng</string>
    <string name="vnd">VNĐ</string>
    <string name="million">Triệu</string>
    <string name="billion">Tỷ</string>
    <string name="lhc">Điểm</string>
    <string name="unknown">Không xác định</string>
    <string name="date">Ngày</string>
    <string name="second">giây</string>
    <string name="minute">phút</string>
    <string name="hour">giờ</string>
    <string name="day">ngày</string>
    <string name="month">tháng</string>
    <string name="year">năm</string>
    <string name="from_to">Từ $F - $T</string>
    <string name="ago">trước</string>
    <string name="just_done">vừa xong</string>
    <string name="m2">m2</string>
    <string name="signInEmail">Mã Đối Tác / Email / Số Điện Thoại</string>
    <string name="signInPassword">Mật Khẩu</string>
    <string name="signIn">Đăng nhập</string>
    <string name="signIn_Register">Đăng nhập/Đăng ký</string>
    <string name="signInContactSupport">liên hệ hỗ trợ</string>
    <string name="signIn_cannot_open_facebook_messenger">We can\'t open Facebook Messenger right now. Please try again.</string>
    <string name="signIn_input_error">Thông tin không hợp lệ</string>
    <string name="signIn_input_error_msg">Vui lòng nhập tên đăng nhập và mật khẩu của bạn</string>
    <string name="signIn_cannot_login">Không thể đăng nhập</string>
    <string name="login_required_message">Chức năng này yêu cầu đăng nhập. Bạn vui lòng đăng nhập để sử dụng.</string>
    <string name="forgot_password_description">Hãy nhập Mã Đối Tác hoặc Số Điện Thoại của bạn\nchúng tôi hỗ trợ bạn lấy lại mật khẩu.</string>
    <string name="username_phone">Mã Đối Tác / Số Điện Thoại</string>
    <string name="username">Mã Đối Tác</string>
    <string name="reset_password">Lấy Lại Mật Khẩu</string>
    <string name="otp_code">Mã OTP</string>
    <string name="new_password_confirm">Nhập Lại Mật Khẩu Mới</string>
    <string name="new_password_title">Nhập Mật Khẩu Mới</string>
    <string name="forgot_password">Quên Mật Khẩu</string>
    <string name="cannot_request_error">Không thể gửi yêu cầu</string>
    <string name="otp_is_empty_error">Chưa nhập mã xác thực</string>
    <string name="otp_is_empty_message">Vui lòng nhập mã xác thực được gửi tới điện thoại của bạn</string>
    <string name="new_password_is_empty_error">Chưa nhập mật khẩu mới</string>
    <string name="new_password_is_empty_message">Vui lòng nhập mật khẩu mới và xác nhận để hoàn tất</string>
    <string name="password_is_not_match_error">Mật khẩu không khớp</string>
    <string name="password_is_not_match_message">Vui lòng nhập và xác nhận chính xác mật khẩu mới của bạn</string>
    <string name="can_not_change_password_error">Không thể xác nhận mật khẩu của bạn</string>
    <string name="tab_home">Trang Chính</string>
    <string name="tab_profile">Cá Nhân</string>
    <string name="tab_news">Tin Tức</string>
    <string name="tab_project">Dự Án</string>
    <string name="tab_more">Thêm</string>
    <string name="tab_activity">Hoạt Động</string>
    <string name="tab_trans_coin">Chuyển Điểm</string>
    <string name="request_product">Yêu Cầu Sản Phẩm</string>
    <string name="call_support">Gọi Hỗ Trợ</string>
    <string name="refer_partner">Giới Thiệu Đối Tác Mới</string>
    <string name="profile_info_label">Thông tin</string>
    <string name="profile_point_label">Điểm thưởng</string>
    <string name="profile_education_label">Đào tạo</string>
    <string name="profile_intro_label">Giới thiệu</string>
    <string name="profile_info_account_label">Thông tin cá nhân</string>
    <string name="profile_info_company_label">Thông tin công ty</string>
    <string name="link_reward">Reward</string>
    <string name="linkhub">Hub</string>
    <string name="linkbook">Book</string>
    <string name="request_delete_account">Yêu cầu xóa tài khoản</string>
    <string name="delete_account">Xóa Tài Khoản</string>
    <string name="app_partner_benefit">Để nhận được những hỗ trợ, ưu đãi dành riêng cho đối tác MoBan.vn</string>
    <string name="home_all">Tất Cả</string>
    <string name="home_search_partner">Tìm kiếm đối tác</string>
    <string name="home_favorite_project">Dự Án Quan Tâm</string>
    <string name="home_new_post">Bạn đang nghĩ gì</string>
    <string name="search_partner_title">Tìm Kiếm Đối Tác</string>
    <string name="search_partner">Nhập tên đối tác</string>
    <string name="search_referrer_title">Người Giới Thiệu</string>
    <string name="search_referrer">Nhập mã giới thiệu hoặc tên</string>
    <string name="notification">Thông Báo</string>
    <string name="notification_alert_message">Bật thông báo để nhận những tin tức, cập nhật mới nhất từ MoBan.vn</string>
    <string name="feed_like">Thích</string>
    <string name="feed_remove_like">Bỏ Thích</string>
    <string name="feed_comment">Bình Luận</string>
    <string name="feed_reply">Trả lời</string>
    <string name="feed_share">Chia Sẻ</string>
    <string name="feed_follow">Theo Dõi</string>
    <string name="feed_unfollow">Bỏ Theo Dõi</string>
    <string name="feed_comment_placeholder">Viết bình luận của bạn</string>
    <string name="feed_send">Gửi</string>
    <string name="feed_load_more_comment">Xem thêm %d bình luận</string>
    <string name="feed_edit">Sửa Bài Viết</string>
    <string name="feed_notify">Bật Thông Báo</string>
    <string name="feed_notify_off">Tắt Thông Báo</string>
    <string name="feed_delete">Xóa Bài Viết</string>
    <string name="feed_you_did_follow">Bạn đã theo dõi bài viết</string>
    <string name="feed_followed_msg">MoBan.vn sẽ gửi thông báo cho bạn về bài viết này.</string>
    <string name="feed_download_image">Lưu ảnh xuống máy</string>
    <string name="feed_birthday_today">Hôm nay sinh nhật ai?</string>
    <string name="feed_birthday">Chúc Mừng Sinh Nhật</string>
    <string name="feed_send_birthday">Cùng gửi lời chúc đến Đối Tác</string>
    <string name="new_partner">Đối Tác Mới</string>
    <string name="feed_new_partner">Chúc Mừng Đối Tác Mới</string>
    <string name="feed_new_partner_description">Gửi lời chúc mừng đến Đối Tác Mới</string>
    <string name="deal_today">Giao Dịch Hôm Nay</string>
    <string name="project">Dự Án</string>
    <string name="status">Tình Trạng</string>
    <string name="congrat_best_partner">Bảng Xếp Hạng Đối Tác</string>
    <string name="congrat_best_badge">Dành</string>
    <string name="view_detail">Xem Chi Tiết</string>
    <string name="quarter">Quý</string>
    <string name="hurom">Hurom</string>
    <string name="smart_home">Smart Home</string>
    <string name="top_partner">Bảng Xếp Hạng</string>
    <string name="top_month">Theo Tháng</string>
    <string name="top_quarter">Theo Quý</string>
    <string name="top_year">Theo Năm</string>
    <string name="project_search">Tìm kiếm dự án</string>
    <string name="project_agent_rate">Phí Dịch Vụ: </string>
    <string name="project_price_unit">tr/m2</string>
    <string name="project_search_history">Lịch Sử Tìm Kiếm</string>
    <string name="project_favorite_project">Dự Án Nổi Bật</string>
    <string name="project_search_project_with_keyword">Tìm Kiếm Với Từ Khoá </string>
    <string name="project_search_result">Kết Quả Tìm Kiếm</string>
    <string name="search">Tìm Kiếm</string>
    <string name="delete_search">Xóa Tìm Kiếm</string>
    <string name="project_sort">Sắp Xếp:</string>
    <string name="search_project">Tìm kiếm dự án</string>
    <string name="search_secondary">Tìm kiếm bất động sản</string>
    <string name="search_project_advance">Tìm Kiếm Nâng Cao</string>
    <string name="all">Tất Cả</string>
    <string name="flat_id">Mã Căn</string>
    <string name="register_title">Đăng Ký Mới</string>
</resources>