<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/item_deal_today"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingTop="10dp"
    android:paddingBottom="10dp"
    android:background="@color/white"
    android:orientation="horizontal">

    <TextView
        android:id="@+id/item_deal_today_tv_flat_id"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="3"
        android:textColor="@color/color_gray_background_70"
        android:textAppearance="@style/Regular"
        android:textSize="@dimen/large_font_size"
        android:text="@string/flat_id"
        android:gravity="center_vertical"
        android:textAlignment="center"/>

    <TextView
        android:id="@+id/item_deal_today_tv_project"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="5"
        android:textColor="@color/color_gray_background_70"
        android:textAppearance="@style/Regular"
        android:textSize="@dimen/large_font_size"
        android:text="@string/project"
        android:gravity="center_vertical"
        />

    <TextView
        android:id="@+id/item_deal_today_tv_status"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="3"
        android:textColor="@color/color_gray_background_70"
        android:textAppearance="@style/Regular"
        android:textSize="@dimen/large_font_size"
        android:text="@string/status"
        android:gravity="center_vertical"
        android:textAlignment="center"/>

</LinearLayout>
