<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context="com.moban.flow.signin.SignInActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_marginTop="20dp">

        <Button
            android:id="@+id/sign_in_button_anonymous"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_alignParentRight="true"
            android:background="@color/color_clear"
            android:gravity="center"
            android:paddingStart="16dp"
            android:paddingEnd="16dp"
            android:text="@string/skip"
            android:textAlignment="center"
            android:textAllCaps="true"
            android:textAppearance="@style/Medium"
            android:textColor="@color/color_white" />

    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_alignParentTop="true"
        android:layout_above="@id/sign_in_view_content"
        android:layout_height="wrap_content">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="70dp"
            android:layout_centerInParent="true"
            android:adjustViewBounds="true"
            android:src="@drawable/ic_logo" />

    </RelativeLayout>

    <LinearLayout
        android:id="@+id/sign_in_view_content"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:layout_marginStart="31dp"
        android:layout_marginEnd="31dp"
        android:orientation="vertical">

        <EditText
            android:id="@+id/sign_in_edtUsername"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:background="@drawable/background_sign_in_text_field"
            android:hint="@string/signInEmail"
            android:inputType="textEmailAddress"
            android:paddingStart="29dp"
            android:paddingEnd="29dp"
            android:textColor="@color/black"
            android:textColorHint="@color/color_black_50"
            android:textSize="15sp" />

        <EditText
            android:id="@+id/sign_in_edtPassword"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginTop="12dp"
            android:background="@drawable/background_sign_in_text_field"
            android:hint="@string/signInPassword"
            android:inputType="textPassword"
            android:paddingStart="29dp"
            android:paddingEnd="29dp"
            android:textColor="@color/black"
            android:textColorHint="@color/color_black_50"
            android:textSize="15sp" />

        <Button
            android:id="@+id/sign_in_btnLogin"
            style="?android:attr/borderlessButtonStyle"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginTop="12dp"
            android:background="@drawable/background_gradient_round_4"
            android:gravity="center"
            android:text="@string/signIn"
            android:textAlignment="center"
            android:textAllCaps="true"
            android:textAppearance="@style/Medium"
            android:textSize="13sp"
            android:textColor="@color/color_white" />

    </LinearLayout>

    <TextView
        android:id="@+id/sign_in_tv_forgot_password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/sign_in_tv_register"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="50dp"
        android:layout_marginBottom="40dp"
        android:textAlignment="center"
        android:text="@string/forgot_password"
        android:textAllCaps="true"
        android:textColor="@color/black"
        android:textSize="13sp" />

    <TextView
        android:id="@+id/sign_in_tv_register"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_below="@id/sign_in_view_content"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="31dp"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="31dp"
        android:background="@drawable/background_secondary_button_round_4"
        android:gravity="center"
        android:text="@string/register_title"
        android:textAlignment="center"
        android:textAllCaps="true"
        android:textColor="@color/colorAccent"
        android:textSize="13sp" />

    <TextView
        android:id="@+id/sign_in_tv_contact_support"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="40dp"
        android:padding="16dp"
        android:text="@string/signInContactSupport"
        android:textAllCaps="true"
        android:textColor="@color/color_white"
        android:textSize="15sp"
        android:visibility="gone" />

    <FrameLayout
        android:id="@+id/sign_in_progressbar"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:alpha="0.4"
        android:animateLayoutChanges="true"
        android:background="#000000"
        android:visibility="gone">

        <ProgressBar
            style="@style/ProgressBarStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:indeterminate="true" />

    </FrameLayout>

</RelativeLayout>
