<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/white"
    android:orientation="vertical">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:height="40dp"
        android:gravity="center_vertical"
        android:paddingStart="15dp"
        android:text="@string/new_partner"
        android:textAppearance="@style/Regular"
        android:textColor="@color/color_black"
        android:textSize="@dimen/large_font_size" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="300dp"
        android:background="@drawable/bg_new_partner">

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/feed_new_partner_recycleView"
            android:layout_width="match_parent"
            android:layout_height="125dp"
            android:layout_alignParentBottom="true"
            android:layout_marginBottom="25dp"
            android:background="@color/color_white" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_above="@id/feed_new_partner_recycleView"
            android:layout_marginBottom="20dp"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/feed_new_partner"
                android:textAlignment="center"
                android:textAppearance="@style/Regular"
                android:textColor="@color/color_black"
                android:textSize="20sp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/feed_new_partner_description"
                android:textAlignment="center"
                android:textAppearance="@style/Regular"
                android:textColor="@color/color_black"
                android:textSize="@dimen/large_font_size" />

        </LinearLayout>

    </RelativeLayout>

</LinearLayout>
